working mistral container deployment

--- a/lm-eval-harness-benchmarking/Dockerfile
+++ b/lm-eval-harness-benchmarking/Dockerfile
@@ -1,5 +1,5 @@
 # Use the huggingface/transformers-pytorch-gpu base image
-FROM huggingface/transformers-pytorch-gpu:latest
+FROM shadeform/transformers-pytorch-gpu:latest
 
 
 VOLUME ~/.cache/huggingface /root/.cache/huggingface
@@ -16,4 +16,4 @@ RUN chmod +x setup.sh
 RUN ./setup.sh
 
 #start the server
-ENTRYPOINT lm_eval --model hf --model_args pretrained=$model --tasks $tasks --device cuda:0 --batch_size 8
+ENTRYPOINT lm_eval --model hf --model_args pretrained=$model --tasks $tasks --device cuda:0 --batch_size 8 --num_fewshot $num_fewshot
